# Federated-learning

./: .gitignore  Información.txt  PI-CAI_3__part3.xlsx  PI-CAI_3_parte2.xlsx  PI-CAI_3_parte4.xlsx  README.md  centralized.py  client_1.py  client_2.py  client_3.py  client_4.py  client_app.py  client_manager.py  config.yaml  experiment.py  info.txt  server.py  strategy.py  task.py  temp_database2.csv
1_client_(centralized)/: client.py
4 clients/: PI-CAI_3__part1.xlsx  client_3.py  client_4.py  server.py
4_clients/: client_1.py  client_2.py  client_3.py  client_4.py  client_app.py  pyproject.toml  server.py  task.py  temp_database_2.csv  temp_database_3.csv  temp_database_4.csv
centralized/: PI-CAI_3.xlsx  client.py  client_central.py
centralized_(FL_1_client)/: client.py  server.py  temp_database.csv
fl-four-clients/: centralized.py  centralized_old.py  client_1.py  client_3.py  client_4.py  client_app.py  client_manager.py  config.yaml  experiment.py  info.txt  model.py  requirements.txt  server.py  strategy.py  task.py
fl_4_clients/: Info.txt  client_1.py  client_3.py  client_app.py  commands.sh  config.yaml  pyproject.toml  server.py
four-clients/: client_1.py  client_2.py  client_3.py  client_4.py  client_app.py  pyproject.toml  rafcasceb.four-clients.1-0-0.744eda2f.fab  rafcasceb.four-clients.1-0-0.da8e1998.fab  rafcasceb.fourclients.1-0-0.44306e34.fab  server.py  task.py
ignore_docs/: compila.txt  ejecuta.txt  ignore_info.txt
