#[tool.flower]
#app = "server:app"
# run-config = "config.yaml"

[project]
name = "four-clients"
version = "1.0.0"
description = "Flower project with a server and some clients."

[tool.flwr.app.components]
serverapp = "server:app"
clientapp = "client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-evaluate = 0.5
local-epochs = 1
learning-rate = 0.1
batch-size = 32

[tool.flwr.app]
publisher = "rafcasceb"

[tool.flwr.federations]
default = "server"

[tool.flwr.federations.server]
transport = "http"
address = "127.0.0.1:8081"
insecure = true

[tool.flwr.federations.clients]
transport = "http"
insecure = true